src/snapshots/rcc__tokenizer__tests__main_func_looking.snap
---
source: src/tokenizer.rs
expression: tokenizer.tokenize()
---
- kind:
    Type: Int
  loc:
    offset: 0
    line: 1
    column: 1
  length: 3
- kind:
    Var: main
  loc:
    offset: 4
    line: 1
    column: 1
  length: 4
- kind:
    Punct: LeftParen
  loc:
    offset: 8
    line: 1
    column: 1
  length: 1
- kind:
    Punct: RightParen
  loc:
    offset: 9
    line: 1
    column: 1
  length: 1
- kind:
    Punct: LeftBrace
  loc:
    offset: 11
    line: 1
    column: 1
  length: 1
- kind:
    Keyword: Return
  loc:
    offset: 13
    line: 1
    column: 1
  length: 6
- kind:
    Number: 1
  loc:
    offset: 20
    line: 1
    column: 1
  length: 1
- kind:
    Punct: Plus
  loc:
    offset: 22
    line: 1
    column: 1
  length: 1
- kind:
    Number: 1
  loc:
    offset: 24
    line: 1
    column: 1
  length: 1
- kind:
    Punct: Semicolon
  loc:
    offset: 25
    line: 1
    column: 1
  length: 1
- kind:
    Punct: RightBrace
  loc:
    offset: 27
    line: 1
    column: 1
  length: 1
- kind: Eof
  loc:
    offset: 28
    line: 1
    column: 1
  length: 0
