src/snapshots/rcc__tokenizer__tests__multiple.snap
---
source: src/tokenizer.rs
expression: tokenizer.tokenize()
---
- kind:
    Number: 10
  loc:
    offset: 0
    line: 1
    column: 1
  length: 2
- kind:
    Number: 20
  loc:
    offset: 3
    line: 1
    column: 1
  length: 2
- kind:
    Number: 30
  loc:
    offset: 6
    line: 1
    column: 1
  length: 2
- kind: Eof
  loc:
    offset: 8
    line: 1
    column: 1
  length: 0
