src/snapshots/rcc__tokenizer__tests__nothing.snap
---
source: src/tokenizer.rs
expression: tokenizer.tokenize()
---
- kind: Eof
  loc:
    offset: 0
    line: 1
    column: 1
  length: 0
