src/snapshots/rcc__tokenizer__tests__ten.snap
---
source: src/tokenizer.rs
expression: tokenizer.tokenize()
---
- kind:
    Number: 10
  loc:
    offset: 0
    line: 1
    column: 1
  length: 2
- kind: Eof
  loc:
    offset: 2
    line: 1
    column: 1
  length: 0
