src/snapshots/rcc__tokenizer__tests__with_any_char.snap
---
source: src/tokenizer.rs
expression: tokenizer.tokenize()
---
- kind:
    Str: +-xd
  loc:
    offset: 0
    line: 1
    column: 1
  length: 4
- kind: Eof
  loc:
    offset: 6
    line: 1
    column: 1
  length: 0
